--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
       <div class="sofa-container">
         <img class="sofa" src="./img/sofa.png" id="sofa" alt="sofa">
-        <img class="vector vector-360 "  type="button" src="./img/vector-360.svg" alt="Botão para visualizar o sofá em 360 graus" onclick="Vetor360()">
+        <img class="vector vector-360 "  type="button" src="./img/vector-360.svg" alt="Botão para visualizar o sofá em 360 graus" id="vector" onclick="Vetor360()">
       </div>
       <div class="information">
         <p class="codigo"> CÓDIGO: 42404 </p>
